--- a/index.ipynb
+++ b/index.ipynb
@@ -46,24 +46,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Passenger Class Here"
+    "class Person:\n",
+    "    def __init__(self, name=None, job=None):\n",
+    "        self.name = name\n",
+    "        self.job = job"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "rebecca_black = None # initialize Rebecca Black here\n",
+    "jeff = Person('jeff','accountant')\n",
+    "print(jeff.name)\n",
+    "print(jeff.job)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define Passenger Class Here\n",
+    "class Passenger:\n",
+    "    def __init__(self,first=None,last=None,email=None,rides_taken=0):\n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.email = '{}.{}@gmail.com'.format(first,last)\n",
+    "        self.rides_taken = rides_taken"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rebecca\n",
+      "Black\n",
+      "Rebecca.Black@gmail.com\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "rebecca_black = Passenger('Rebecca','Black') # initialize Rebecca Black here\n",
     "print(rebecca_black.first) # \"Rebecca\"\n",
     "print(rebecca_black.last) # \"Black\"\n",
     "print(rebecca_black.email) # \"rebecca.black@gmail.com\"\n",
@@ -95,13 +131,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Passenger Class Here"
+    "# Define Passenger Class Here\n",
+    "class Driver:\n",
+    "    def __init__(self,first=None,last=None,favorite_hobby='Driving'):\n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.favorite_hobby = favorite_hobby"
    ]
   },
   {
@@ -113,7 +152,7 @@
    },
    "outputs": [],
    "source": [
-    "dale_earnhardt = None # initialize Dale Earnhardt here\n",
+    "dale_earnhardt = Driver('Dale','Earnhardt') # initialize Dale Earnhardt here\n",
     "print(dale_earnhardt.first) # \"Dale\"\n",
     "print(dale_earnhardt.last) # \"Earnhardt\"\n",
     "print(dale_earnhardt.favorite_hobby) # \"driving\""
@@ -164,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
